{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 3143,
  "lineage": "c1269063-43fd-a615-6097-196eea7e7fa3",
  "resources": [
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "oblig-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484464232591:route-table/rtb-0114e5aa3241a31fb",
            "default_route_table_id": "rtb-0114e5aa3241a31fb",
            "id": "rtb-0114e5aa3241a31fb",
            "owner_id": "484464232591",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032ff122acaf46cfb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default route table"
            },
            "tags_all": {
              "Name": "default route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0401a285f4970945d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_deploy_isc.aws_internet_gateway.web_lb_igw",
            "module.dev_deploy_isc.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "module-web1-instance-deploy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ededff12e34e59e",
            "arn": "arn:aws:ec2:us-east-1:484464232591:instance/i-08c2a7e2b536fda98",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c2a7e2b536fda98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-099914364a4ebe01a",
            "private_dns": "ip-10-0-1-233.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.233",
            "public_dns": "ec2-52-201-218-181.compute-1.amazonaws.com",
            "public_ip": "52.201.218.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0c428931a645e59ec",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a7006060a48e074",
            "tags": {
              "Name": "Servidor-web1-parametrizado"
            },
            "tags_all": {
              "Name": "Servidor-web1-parametrizado"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041aed347239472a3",
              "sg-0fdd162be0dc387ee"
            ]
          },
          "dependencies": [
            "module.dev_deploy_isc.aws_efs_file_system.efs-server",
            "module.dev_deploy_isc.aws_security_group.efs-sg",
            "module.dev_deploy_isc.aws_security_group.web-SG",
            "module.dev_deploy_isc.aws_subnet.pub_subnet1_obligatorio",
            "module.dev_deploy_isc.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "module-web2-instance-deploy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ededff12e34e59e",
            "arn": "arn:aws:ec2:us-east-1:484464232591:instance/i-018c3b2546f950a46",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018c3b2546f950a46",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b5616b33137f67a0",
            "private_dns": "ip-10-0-2-127.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.127",
            "public_dns": "ec2-34-229-195-176.compute-1.amazonaws.com",
            "public_ip": "34.229.195.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0fa3bf0b8c6b006bb",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063837337d3055161",
            "tags": {
              "Name": "Servidor-web2-parametrizado"
            },
            "tags_all": {
              "Name": "Servidor-web2-parametrizado"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fdd162be0dc387ee"
            ]
          },
          "dependencies": [
            "module.dev_deploy_isc.aws_efs_file_system.efs-server",
            "module.dev_deploy_isc.aws_security_group.web-SG",
            "module.dev_deploy_isc.aws_subnet.pub_subnet2_obligatorio",
            "module.dev_deploy_isc.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_lb_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484464232591:internet-gateway/igw-032ff122acaf46cfb",
            "id": "igw-032ff122acaf46cfb",
            "owner_id": "484464232591",
            "tags": {
              "Name": "web-lb-igw"
            },
            "tags_all": {
              "Name": "web-lb-igw"
            },
            "vpc_id": "vpc-0401a285f4970945d"
          },
          "dependencies": [
            "module.dev_deploy_isc.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484464232591:loadbalancer/app/web-lb/22f1bd141da1677b",
            "arn_suffix": "app/web-lb/22f1bd141da1677b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-lb-1243492180.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:484464232591:loadbalancer/app/web-lb/22f1bd141da1677b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-083459c8ff3e46075"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a7006060a48e074"
              },
              {
                "subnet_id": "subnet-063837337d3055161"
              }
            ],
            "subnets": [
              "subnet-01a7006060a48e074",
              "subnet-063837337d3055161"
            ],
            "tags": {
              "Name": "web-lb"
            },
            "tags_all": {
              "Name": "web-lb"
            },
            "vpc_id": "vpc-0401a285f4970945d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.dev_deploy_isc.aws_security_group.web_lb_sg",
            "module.dev_deploy_isc.aws_subnet.pub_subnet1_obligatorio",
            "module.dev_deploy_isc.aws_subnet.pub_subnet2_obligatorio",
            "module.dev_deploy_isc.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484464232591:listener/app/web-lb/22f1bd141da1677b/dcd2fddb99e197f8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:484464232591:targetgroup/web-target-group/e6dd49317480de54",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:484464232591:listener/app/web-lb/22f1bd141da1677b/dcd2fddb99e197f8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:484464232591:loadbalancer/app/web-lb/22f1bd141da1677b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_deploy_isc.aws_lb.web_lb",
            "module.dev_deploy_isc.aws_lb_target_group.web_target_group",
            "module.dev_deploy_isc.aws_security_group.web_lb_sg",
            "module.dev_deploy_isc.aws_subnet.pub_subnet1_obligatorio",
            "module.dev_deploy_isc.aws_subnet.pub_subnet2_obligatorio",
            "module.dev_deploy_isc.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484464232591:targetgroup/web-target-group/e6dd49317480de54",
            "arn_suffix": "targetgroup/web-target-group/e6dd49317480de54",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:484464232591:targetgroup/web-target-group/e6dd49317480de54",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0401a285f4970945d"
          },
          "dependencies": [
            "module.dev_deploy_isc.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:484464232591:targetgroup/web-target-group/e6dd49317480de54-20230627040023873900000004",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:484464232591:targetgroup/web-target-group/e6dd49317480de54",
            "target_id": "i-08c2a7e2b536fda98"
          },
          "dependencies": [
            "module.dev_deploy_isc.aws_efs_file_system.efs-server",
            "module.dev_deploy_isc.aws_instance.module-web1-instance-deploy",
            "module.dev_deploy_isc.aws_lb_target_group.web_target_group",
            "module.dev_deploy_isc.aws_security_group.efs-sg",
            "module.dev_deploy_isc.aws_security_group.web-SG",
            "module.dev_deploy_isc.aws_subnet.pub_subnet1_obligatorio",
            "module.dev_deploy_isc.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:484464232591:targetgroup/web-target-group/e6dd49317480de54-20230627040014153500000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:484464232591:targetgroup/web-target-group/e6dd49317480de54",
            "target_id": "i-018c3b2546f950a46"
          },
          "dependencies": [
            "module.dev_deploy_isc.aws_efs_file_system.efs-server",
            "module.dev_deploy_isc.aws_instance.module-web2-instance-deploy",
            "module.dev_deploy_isc.aws_lb_target_group.web_target_group",
            "module.dev_deploy_isc.aws_security_group.web-SG",
            "module.dev_deploy_isc.aws_subnet.pub_subnet2_obligatorio",
            "module.dev_deploy_isc.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_route",
      "name": "web_lb_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-032ff122acaf46cfb",
            "id": "r-rtb-0114e5aa3241a31fb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0114e5aa3241a31fb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_deploy_isc.aws_internet_gateway.web_lb_igw",
            "module.dev_deploy_isc.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484464232591:security-group/sg-041aed347239472a3",
            "description": "Security group for EFS access",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041aed347239472a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-security-group",
            "name_prefix": "",
            "owner_id": "484464232591",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0401a285f4970945d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_deploy_isc.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484464232591:security-group/sg-0fdd162be0dc387ee",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdd162be0dc387ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG_Obl_ssh_http",
            "name_prefix": "",
            "owner_id": "484464232591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-ac1-sg"
            },
            "tags_all": {
              "Name": "terraform-ac1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0401a285f4970945d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_deploy_isc.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484464232591:security-group/sg-083459c8ff3e46075",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083459c8ff3e46075",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-web-lb-sg",
            "name_prefix": "",
            "owner_id": "484464232591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-web-lb-sg"
            },
            "tags_all": {
              "Name": "terraform-web-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0401a285f4970945d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_deploy_isc.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet1_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484464232591:subnet/subnet-01a7006060a48e074",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a7006060a48e074",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "484464232591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet obligatorio"
            },
            "tags_all": {
              "Name": "subnet obligatorio"
            },
            "vpc_id": "vpc-0401a285f4970945d"
          },
          "dependencies": [
            "module.dev_deploy_isc.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet2_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484464232591:subnet/subnet-063837337d3055161",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063837337d3055161",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "484464232591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2 obligatorio"
            },
            "tags_all": {
              "Name": "subnet2 obligatorio"
            },
            "vpc_id": "vpc-0401a285f4970945d"
          },
          "dependencies": [
            "module.dev_deploy_isc.aws_vpc.vpc_obligatorio"
          ]
        }
      ]
    },
    {
      "module": "module.dev_deploy_isc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484464232591:vpc/vpc-0401a285f4970945d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-057592898855a8ba2",
            "default_route_table_id": "rtb-0114e5aa3241a31fb",
            "default_security_group_id": "sg-0866ed0413cc329fc",
            "dhcp_options_id": "dopt-010b78e447e09bb5e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0401a285f4970945d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0114e5aa3241a31fb",
            "owner_id": "484464232591",
            "tags": {
              "Name": "VPC_OBLIGATORIO_ISC"
            },
            "tags_all": {
              "Name": "VPC_OBLIGATORIO_ISC"
            }
          }
        }
      ]
    }
  ]
}